# rpk

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  cliff.toml  rust-toolchain.toml  rustfmt.toml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: CICD.yml
completions/bash/: grm.bash  rpk.bash
completions/elvish/: grm.elv  rpk.elv
completions/fish/: grm.fish  rpk.fish
completions/powershell/: _grm.ps1  _rpk.ps1
completions/zsh/: _grm  _rpk
demo/: packages.toml
scripts/: generate_completions  install
src/: cli.rs  commands.rs  context.rs  installer.rs  main.rs  manager.rs
src/cli/: color.rs  color_choice.rs  mod.rs  raw.rs  tests.rs
src/config/: editable.rs  locked.rs  mod.rs  packages.toml
src/context/: message.rs  mod.rs  tests.rs
src/lock/: installer.rs  mod.rs
src/manager/: installer.rs  mod.rs
src/provider/: github.rs  mod.rs  reqwest_ext.rs
src/util/: build.rs  fs.rs  fs_ext.rs  http.rs  mod.rs  reqwest.rs  temp.rs
