[package]
name = "grm"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage packages from GitHub releases."

[dependencies]
anyhow = "1"
flate2 = "1.0.31"
futures-util = "0.3.30"
indicatif = "0.17.8"
octocrab = "0.39"
once_cell = "1.19.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = [
    "stream",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
tar = "0.4.41"
tempfile = "3.11.0"
tokio = { version = "1.39", features = ["full"] }
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
yansi = "1.0.1"
zip = "2.1.6"
clap = { version = "4", features = ["wrap_help", "derive", "env"] }
clap_complete = { version = "4" }
home = "0.5.9"
constcat = "0.5.0"
thiserror = "1.0.63"
indexmap = { version = "2.3", features = ["rayon", "serde"] }
url = "2.5.2"
itertools = "0.13.0"
rayon = "1.10.0"
futures = "0.3.30"
xdg = "2.5.2"
toml_edit = "0.22.20"
skim = "0.10.4"

[build-dependencies]
anyhow = "1"
